--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -14,16 +14,14 @@
     <meta property="og:title" content="Futuro Hoje" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.futurohoje.com/" />
-    <meta property="og:image" content="futurohoje.svg"/>
+    <meta property="og:image" content="futurohoje.png"/>
     <meta property="og:description" content="Rede de investimentos finaceiros" /> 
     <meta property="og:locale" content="pt_BR" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <header>
-    <button onclick="toggleDarkMode()"><span class="material-symbols-outlined">
-        dark_mode
-        </span></button>
+    <button id="buttonMode" class="material-symbols-outlined" onclick="toggleDarkMode()">dark_mode</button>
 </header>
 <body>
     <main>
@@ -75,6 +73,13 @@
     function toggleDarkMode() {
 var body = document.body;
 body.classList.toggle("dark-mode");
+
+var buttonMode = document.getElementById("buttonMode")
+if(body.classList.contains("dark-mode")){
+    buttonMode.textContent = "light_mode"
+}else{
+    buttonMode.textContent = "dark_mode"
+}
 }
 </script>
 </html>
