Update do url do OPG image

--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Futuro Hoje" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.futurohoje.com/" />
-    <meta property="og:image" content="futurohoje.png"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"/>
     <meta property="og:description" content="Rede de investimentos finaceiros" /> 
     <meta property="og:locale" content="pt_BR" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
