--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.futurohoje.com/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.svg"/>
-    <meta property="og:description" content="Rede de investimentos finaceiros" /> 
+    <meta property="og:description" content="Rede de investimentos financeiros" /> 
     <meta property="og:locale" content="pt_BR" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -35,18 +35,18 @@
             Transforme seus sonhos em realidade!
             <div id="futurpara">
                 <p>Comece a pensar<br> no futuro desde já!</p>
-                <p>Crie sua conta agora <br>e começe a investir!</p>
+                <p>Crie sua conta agora <br>e comece a investir!</p>
             </div>
         </section>
         <form action="" method="post">
             <div class="linha">
                 <div class="coluna">
-                    <label for="fname">Nome</label>
-                    <input id="fname" type="text">
+                    <label for="pnome">Nome</label>
+                    <input id="pnome" type="text">
                 </div>
                 <div class="coluna">
-                    <label for="sname">Sobrenome</label>
-                    <input id="sname" type="text">
+                    <label for="snome">Sobrenome</label>
+                    <input id="snome" type="text">
                 </div>
             </div>
             <div class="linha">
@@ -77,14 +77,15 @@
         <article>
             <p>A Futuro Hoje tem transformado <br>a vida de muitos de seus investidores<br> simplesmente mudando a<br> forma de investir seu capital!</p>
             <div id="depoimentos">
-                <p>"Eu não fazia ideia de quanto dinheiro estava deixando de ganhar por dia!"<br> -Wallace G.</p>
-                <p>"Precisava de uma maneira nova de investir meu dinheiro, e encontrei a que mais se adequa às minhas necessidades!"<br> -Diana P.</p>
-                <p>"Diversificar minha carteira de investimentos é a maneira mais inteligente de acumular capital!"<br> -Roger S.</p>
+                <p>"Eu não fazia ideia de quanto dinheiro estava deixando de ganhar por dia!"<br> <i>-Wallace G.</i></p>
+                <p>"Precisava de uma maneira nova de investir meu dinheiro, e encontrei a que mais se adequa às minhas necessidades!"<br><i>-Diana P.</i></p>
+                <p>"Diversificar minha carteira de investimentos é a maneira mais inteligente de acumular capital!"<br> <i>-Roger S.</i></p>
             </div>
         </article>
+            <p>Já possui uma conta? <a href="">Faça Login</a><br></p>
     </main>
     <footer>
-        Já possui uma conta? <a href="">Faça Login</a>
+        Criado e desenvolvido por @gaidenblk softworks - 2024 - Todos os direitos reservados
     </footer>
 </body>
 <script>
