--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Futuro Hoje" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.futurohoje.com/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.svg"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"/>
     <meta property="og:description" content="Rede de investimentos financeiros" /> 
     <meta property="og:locale" content="pt_BR" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -26,7 +26,7 @@
 <body>
     <main>
         <div id="topo">
-                <object id="futuroicone" data="futurohoje.svg" type="image/svg+xml">Seu navegador não suporta SVG</object>
+                <img id="futuroicone" src="futurohoje.png" alt="Futuro Hoje Logo">
                 <h1>FUTURO <br>HOJE</h1>
         </div>
         <section>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div id="botao" class="linha">
-                <p>Ao Clicar em "Criar Conta" <br>você concorda com<br>nossos <a href="termos.html">termos de serviços</a> e <br><a href="privacidade.html">política de privacidade</a></p>
+                <p>Ao Clicar em "Criar Conta" <br>você concorda com nossos<br><a href="termos.html">termos de serviços</a> e <br><a href="privacidade.html">política de privacidade</a></p>
                 <input type="submit" value="Criar conta">
             </div>
         </form>
