Corrigindo links de pastas e fazendo ajustes

--- a/projetolandingpage/html/privacidade.html
+++ b/projetolandingpage/html/privacidade.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <link rel="icon" href="futurohojefav.png" type="image/x-icon">
         <meta name="description" content="Rede financeira de investimentos capitais.">
         <meta name="keywords" content="investimentos, hoje, futuro, dinheiro, investir">
@@ -24,5 +24,5 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti optio nam voluptates laborum saepe dolor in unde sapiente dolorum maxime, animi nobis quae sunt dolorem, illum omnis impedit veritatis!</p>
     </main>
 </body>
-<footer><a href="index.html">Retornar</a></footer>
+<footer><a href="/index.html">Retornar</a></footer>
 </html>
