--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div id="botao" class="linha">
-                <p>Ao Clicar em "Criar Conta" <br>você concorda com nossos<br><a href="termos.html">termos de serviços</a> e <br><a href="privacidade.html">política de privacidade</a></p>
+                <p>Ao Clicar em "Criar Conta" <br>você concorda com nossos<br><a href="html/termos.html">termos de serviços</a> e <br><a href="html/privacidade.html">política de privacidade</a></p>
                 <input type="submit" value="Criar conta">
             </div>
         </form>
