--- a/i18n-exercicio/index.html
+++ b/i18n-exercicio/index.html
@@ -15,5 +15,13 @@
         let resultado = palavra[0] + numeroDoMeio + ultimaLetra;
         alert(resultado);
     </script>
+    Essa página tem por objetivo replicar um algoritmo que converte uma palavra em um texto onde:
+    <ul>
+        <li>A primeira letra da palavra é mantida.</li>
+        <li>No meio da palavra informa um número que contém a quantidade de caracteres depois da primeira letra e antes da ultima.</li>
+        <li>E a ultima letra da palavra pedida.</li>
+    </ul>
+
+    Aperte F5 para reiniciar...
 </body>
 </html>
