Atualizando os botões para a HomePage

--- a/i18n-exercicio/index.html
+++ b/i18n-exercicio/index.html
@@ -22,6 +22,7 @@
         <li>E a ultima letra da palavra pedida.</li>
     </ul>
 
-    Aperte F5 para reiniciar...
+    Aperte F5 para reiniciar...<br/>
+    Voltar para <a href="/index.html">Home</a>
 </body>
 </html>
