--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <header>
+    <a id="voltarParaHome" class="material-symbols-outlined" href="/index.html">house</a>
     <button id="buttonMode" class="material-symbols-outlined" onclick="toggleDarkMode()">dark_mode</button>
     <div id="topo">
         <div>
