--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ul>
         <li><a href="projetolandingpage/index.html">Meu primeiro Projeto de Landing Page</a></li>
         <li><a href="i18n-exercicio/index.html">Projeto de Algoritmo conversor de texto</a></li>
+        <li><a href="javascript-aula2/index.html">Exercícios da Aula 2 de JavaScript</a></li>
     </ul>
 
     Conforme sigo estudando, continuarei atualizando essa página!
