Inclusão das Aulas 3 e 4 e alguns ajustes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <ul>
         <li><a href="projetolandingpage/index.html">Meu primeiro Projeto de Landing Page</a></li>
-        <li><a href="i18n-exercicio/index.html">Projeto de Algoritmo conversor de texto</a></li>
-        <li><a href="javascript-aula2/index.html">Exercícios da Aula 2 de JavaScript</a></li>
+        <li><a href="exercicios-javascript.html">Exercicios das Aulas de JavaScript</a></li>
     </ul>
 
     Conforme sigo estudando, continuarei atualizando essa página!
