--- a/javascript-aula2/exercicio-1.html
+++ b/javascript-aula2/exercicio-1.html
@@ -9,7 +9,8 @@
     O objetivo deste exercício é incrementar atributos e valores <br/>
     em um objeto chamado "visitante" e depois exibi-lo através do console.log().<br/>
     <button id="executa">executa</button><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         let executa = document.querySelector("#executa");
         executa.addEventListener("click", function(){
