--- a/javascript-aula2/exercicio-10.html
+++ b/javascript-aula2/exercicio-10.html
@@ -11,7 +11,8 @@
     <button id="adiciona">adiciona</button>
     <ul id="listaTarefas">
     </ul><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         let input = document.querySelector("#texto");
         let adiciona = document.querySelector("#adiciona");
