--- a/javascript-aula2/exercicio-3.html
+++ b/javascript-aula2/exercicio-3.html
@@ -8,7 +8,8 @@
 <body>
     O objetivo deste exercício é observar como funciona a ordem de execução do código pelo console<br/>
     <button>Botao</button><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         console.log(1);
         const button = document.querySelector("button");
