--- a/javascript-aula2/exercicio-4.html
+++ b/javascript-aula2/exercicio-4.html
@@ -9,7 +9,8 @@
     O objetivo deste exercício é printar na tela um <br/>texto escrito dentro da caixa de texto abaixo<br/> ao pressionar o botão<br/>
     <input type="text">
     <button>botao</button><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         const button = document.querySelector("button");
         function printText() {            
