--- a/javascript-aula2/exercicio-5.html
+++ b/javascript-aula2/exercicio-5.html
@@ -10,7 +10,8 @@
     <input type="text">
     <button>mostrar</button>
     <p id="numeroOculto"></p>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         let input = document.querySelector("input");
         let botao = document.querySelector("button");
