--- a/javascript-aula2/exercicio-7.html
+++ b/javascript-aula2/exercicio-7.html
@@ -17,8 +17,9 @@
         </div>
         <div id="vitabanana"><img src="img/exercicio-7/vitabanana.png" alt="Vitamina de Banana">
         </div>
-        <div style="position: absolute; top: 130px; width: 150px;display: block; border: none;">
-            Voltar para o <a href="index.html">Inicio</a>
+        <div style="position: absolute; top: 130px; width: 180px; height: 60px;display: block; border: none;">
+            Voltar para a <a href="index.html">Lista</a><br/>
+            Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
         </div>
     <script>
         
