--- a/javascript-aula2/exercicio-8.html
+++ b/javascript-aula2/exercicio-8.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <button id="botaoEbook">Quero Receber o E-Book Grátis</button><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <div id="containerModal">
         <div id="modalEbook">
             <div><span id="botaoFecha" class="material-symbols-outlined">close</span></div>
