--- a/javascript-aula2/exercicio-9.html
+++ b/javascript-aula2/exercicio-9.html
@@ -15,7 +15,8 @@
             </div>
         </div>
     </div><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         let bomba = document.querySelector("#bomba");
         let pneuCheio = document.querySelector("#pneuCheio");
