--- a/javascript-aula3/index.html
+++ b/javascript-aula3/index.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicios Aula 2 JavaScript</title>
+    <title>Exercícios Aula 3 JavaScript</title>
 </head>
 <body>
-    Segue abaixo a lista de Exercicios da Aula 2 de JavaScript:
+    Segue abaixo a lista de Exercicios da Aula 3 de JavaScript:
     <ul>
-        <li><a href="exercicio-1.html">Exercício 1</a></li>
-        <li><a href="exercicio-2.html">Exercício 2</a></li>
         <li><a href="exercicio-3.html">Exercício 3</a></li>
         <li><a href="exercicio-4.html">Exercício 4</a></li>
-        <li><a href="exercicio-5.html">Exercício 5</a></li>
-        <li><a href="exercicio-6.html">Exercício 6</a></li>
-        <li><a href="exercicio-7.html">Exercício 7</a></li>
         <li><a href="exercicio-8.html">Exercício 8</a></li>
         <li><a href="exercicio-9.html">Exercício 9</a></li>
         <li><a href="exercicio-10.html">Exercício 10</a></li>
