--- a/javascript-aula1/i18n-exercicio.html
+++ b/javascript-aula1/i18n-exercicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto de Algoritmo conversor de texto</title>
 </head>
 <body>
     <script>
@@ -15,14 +15,7 @@
         let resultado = palavra[0] + numeroDoMeio + ultimaLetra;
         alert(resultado);
     </script>
-    Essa página tem por objetivo replicar um algoritmo que converte uma palavra em um texto onde:
-    <ul>
-        <li>A primeira letra da palavra é mantida.</li>
-        <li>No meio da palavra informa um número que contém a quantidade de caracteres depois da primeira letra e antes da ultima.</li>
-        <li>E a ultima letra da palavra pedida.</li>
-    </ul>
-
     Aperte F5 para reiniciar...<br/>
-    Voltar para <a href="/index.html">Home</a>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
 </body>
 </html>
