--- a/javascript-aula2/exercicio-2.html
+++ b/javascript-aula2/exercicio-2.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <p id="paragrafo">Clique em Mim</p><br/>
-    Voltar para o <a href="index.html">Inicio</a>
+    Voltar para a <a href="index.html">Lista</a><br/>
+    Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     <script>
         let paragrafo = document.getElementById("paragrafo");
         function trocaTexto(){
