--- a/javascript-aula2/exercicio-6.html
+++ b/javascript-aula2/exercicio-6.html
@@ -37,8 +37,9 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint reprehenderit cumque deleniti placeat optio perspiciatis unde voluptate commodi, animi cum vero quaerat nemo alias dolore veritatis magni? Ipsa, earum veniam.
         </p>
     </div>
-    <div style="position: absolute; bottom: 550px;">
-        Voltar para o <a href="index.html">Inicio</a>
+    <div style="position: absolute; top: 300px;">
+        Voltar para a <a href="index.html">Lista</a><br/>
+        Voltar para o <a href="/exercicios-javascript.html">Inicio</a>
     </div>
     <script>
         let coresFundo = document.querySelector("#caixaCoresFundo");
