Refatoração da base do código - Aula 4 Adicionado

--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minha Página de Projetos</title>
-</head>
-<body>
-    Olá seja bem vindo a minha página do github!<br/>
+  </head>
+  <body>
+    Olá seja bem vindo a minha página do github!<br />
 
-    Aqui é onde eu coloco meus projetos de estudos!<br/>
+    Aqui é onde eu coloco meus projetos de estudos!<br />
 
-    Entre e fique à vontade!<br/>
+    Entre e fique à vontade!<br />
     Segue a lista de alguns deles:
 
     <ul>
-        <li><a href="projetolandingpage/index.html">Meu primeiro Projeto de Landing Page</a></li>
-        <li><a href="exercicios-javascript.html">Exercicios das Aulas de JavaScript</a></li>
+      <li>
+        <a href="projetolandingpage/index.html"
+          >Meu primeiro Projeto de Landing Page</a
+        >
+      </li>
+      <li>
+        <a href="/exercicios-javascript/">Exercicios das Aulas de JavaScript</a>
+      </li>
     </ul>
 
     Conforme sigo estudando, continuarei atualizando essa página!
-</body>
+  </body>
 </html>
