Nova implementação de modo AJAX - Código reajustado

--- a/exercicios-javascript/index.html
+++ b/exercicios-javascript/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Exercicios JavaScript</title>
-  </head>
-  <body>
-    Segue a lista de Exercícios de JavaScript
-    <ul>
-      <li>
-        <a href="javascript-aula1/index.html"
-          >Exercicios da Aula 1 de JavaScript</a
-        >
-      </li>
-      <li>
-        <a href="javascript-aula2/index.html"
-          >Exercícios da Aula 2 de JavaScript</a
-        >
-      </li>
-      <li>
-        <a href="javascript-aula3/index.html"
-          >Exercícios da Aula 3 de JavaScript</a
-        >
-      </li>
-      <li>
-        <a href="javascript-aula4/index.html"
-          >Exercícios da Aula 4 de JavaScript</a
-        >
-      </li>
-    </ul>
-    Voltar para a <a href="index.html">Home</a><br />
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Lista de Exercicios JavaScript</title>
+	</head>
+	<body id="content">
+		Segue a lista de Exercícios de JavaScript
+		<ul>
+			<li>
+				<a href="javascript-aula1/index.html" class="link"
+					>Aula 01 - Tipos de Dados, Expressões e Variáveis</a
+				>
+			</li>
+			<li>
+				<a href="javascript-aula2/index.html" class="link"
+					>Aula 02 - Fundamentos de objetos e DOM</a
+				>
+			</li>
+			<li>
+				<a href="javascript-aula3/index.html" class="link"
+					>Aula 03 - Comando if-else e biblioteca Math</a
+				>
+			</li>
+			<li>
+				<a href="javascript-aula4/index.html" class="link"
+					>Aula 04 - Comando switch, mapeamento e Date</a
+				>
+			</li>
+		</ul>
+
+		Voltar para a <a href="/index.html" class="link">Home</a><br />
+		<script src="/script.js"></script>
+	</body>
 </html>
