--- a/exercicios-javascript/javascript-aula4/index.html
+++ b/exercicios-javascript/javascript-aula4/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercícios Aula 4 JavaScript</title>
-  </head>
-  <body>
-    Segue abaixo a lista de Exercicios da Aula 4 de JavaScript:
-    <ul>
-      <li><a href="./html/exercicio-5.html">Exercício 5</a></li>
-      <li><a href="./html/exercicio-6.html">Exercício 6</a></li>
-      <li><a href="./html/exercicio-9 objetos.html">Exercício 9 Objetos</a></li>
-      <li><a href="./html/exercicio-9 switch.html">Exercício 9 Switch</a></li>
-      <li><a href="./html/exercicio-10.html">Exercício 10</a></li>
-    </ul>
-    Voltar para o <a href="/exercicios-javascript">Inicio</a><br />
-    Ir para minha <a href="/index.html">Home</a>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Exercícios Aula 4 JavaScript</title>
+	</head>
+	<body id="content">
+		Segue abaixo a lista de Exercicios da Aula 4 de JavaScript:
+		<nav>
+			<ul>
+				<li><a href="./exercicio-5.html" class="link">Exercício 5</a></li>
+				<li><a href="./exercicio-6.html" class="link">Exercício 6</a></li>
+				<li><a href="./exercicio-9-obj.html" class="link">Exercício 9 Objetos</a></li>
+				<li><a href="./exercicio-9-swt.html" class="link">Exercício 9 Switch</a></li>
+				<li><a href="./exercicio-10.html" class="link">Exercício 10</a></li>
+			</ul>
+		</nav>
+		<nav id="linkNav">
+			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
+			Ir para minha <a href="/index.html" class="link">Home</a>
+		</nav>
+		<script src="/script.js"></script>
+	</body>
 </html>
