--- a/exercicios-javascript/javascript-aula1/index.html
+++ b/exercicios-javascript/javascript-aula1/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercicios Aula 1 JavaScript</title>
-  </head>
-  <body>
-    Segue abaixo a lista de Exercicios da Aula 1 de JavaScript:
-    <ul>
-      <li><a href="./html/exercicio-i18n.html">Exercício 1</a></li>
-      <li><a href="./html/exercicio-nome.html">Exercício 2</a></li>
-    </ul>
-    Voltar para o <a href="/exercicios-javascript">Inicio</a><br />
-    Ir para minha <a href="/index.html">Home</a>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Exercicios Aula 1 JavaScript</title>
+	</head>
+	<body id="content">
+		Aula 01 - Tipos de Dados, Expressões e Variáveis
+		<br />
+		Segue abaixo a lista de Exercicios da Aula 1 de JavaScript:
+		<nav>
+			<ul>
+				<li><a href="./exercicio-i18n.html" class="link">Exercício 1</a></li>
+				<li><a href="./exercicio-nome.html" class="link">Exercício 2</a></li>
+			</ul>
+		</nav>
+		<nav id="linkNav">
+			Voltar para o <a href="/exercicios-javascript/" class="link">Inicio</a><br />
+			Ir para minha <a href="/index.html" class="link">Home</a>
+		</nav>
+		<script src="/script.js"></script>
+	</body>
 </html>
