--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minha Página de Projetos</title>
-  </head>
-  <body>
-    Olá seja bem vindo a minha página do github!<br />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/exercicios-javascript/main.css" />
+		<title>Minha Página de Projetos</title>
+	</head>
+	<body id="content">
+		Olá seja bem vindo a minha página do github!<br />
 
-    Aqui é onde eu coloco meus projetos de estudos!<br />
+		Aqui é onde eu coloco meus projetos de estudos!<br />
 
-    Entre e fique à vontade!<br />
-    Segue a lista de alguns deles:
+		Entre e fique à vontade!<br />
+		Segue a lista de alguns deles:
 
-    <ul>
-      <li>
-        <a href="projetolandingpage/index.html"
-          >Meu primeiro Projeto de Landing Page</a
-        >
-      </li>
-      <li>
-        <a href="/exercicios-javascript/">Exercicios das Aulas de JavaScript</a>
-      </li>
-    </ul>
+		<ul>
+			<li>
+				<a href="projetolandingpage/index.html" class="link"
+					>Meu primeiro Projeto de Landing Page</a
+				>
+			</li>
+			<li>
+				<a href="/exercicios-javascript/" class="link"
+					>Exercicios das Aulas de JavaScript</a
+				>
+			</li>
+		</ul>
 
-    Conforme sigo estudando, continuarei atualizando essa página!
-  </body>
+		Conforme sigo estudando, continuarei atualizando essa página!
+		<script src="/script.js"></script>
+	</body>
 </html>
