--- a/projetolandingpage/html/privacidade.html
+++ b/projetolandingpage/html/privacidade.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Futuro Hoje!</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="icon" href="futurohojefav.png" type="image/x-icon">
-        <meta name="description" content="Rede financeira de investimentos capitais.">
-        <meta name="keywords" content="investimentos, hoje, futuro, dinheiro, investir">
-        <meta property="og:title" content="Futuro Hoje" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://www.futurohoje.com/" />
-        <meta property="og:image" content="http://www.futurohoje.com/futurohoje.png"/>
-        <meta property="og:description" content="Rede de investimentos finaceiros" /> 
-        <meta property="og:locale" content="pt_BR" />
-    </head>
-<body>
-    <main>
-        <h1>Política de Privacidade</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti optio nam voluptates laborum saepe dolor in unde sapiente dolorum maxime, animi nobis quae sunt dolorem, illum omnis impedit veritatis!</p>
-    </main>
-</body>
-<footer><a href="/index.html">Retornar</a></footer>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Futuro Hoje!</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="icon" href="futurohojefav.png" type="image/x-icon" />
+		<meta name="description" content="Rede financeira de investimentos capitais." />
+		<meta name="keywords" content="investimentos, hoje, futuro, dinheiro, investir" />
+		<meta property="og:title" content="Futuro Hoje" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://www.futurohoje.com/" />
+		<meta property="og:image" content="http://www.futurohoje.com/futurohoje.png" />
+		<meta property="og:description" content="Rede de investimentos finaceiros" />
+		<meta property="og:locale" content="pt_BR" />
+	</head>
+	<body id="content">
+		<main>
+			<h1>Política de Privacidade</h1>
+			<p>
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti
+				optio nam voluptates laborum saepe dolor in unde sapiente dolorum maxime, animi
+				nobis quae sunt dolorem, illum omnis impedit veritatis!
+			</p>
+		</main>
+	</body>
+	<footer><a href="/index.html" class="link">Retornar</a></footer>
 </html>
