--- a/projetolandingpage/index.html
+++ b/projetolandingpage/index.html
@@ -1,159 +1,179 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" href="img/futurohojefav.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap" rel="stylesheet">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="stylesheet" href="css/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+		/>
+		<link rel="icon" href="img/futurohojefav.png" type="image/x-icon" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Afacad&family=Mitr:wght@500&display=swap"
+			rel="stylesheet"
+		/>
 
-    <!-- HTML Meta Tags -->
-    <title>Futuro Hoje</title>
-    <meta name="description" content="Rede de investimentos financeiros">
+		<!-- HTML Meta Tags -->
+		<title>Futuro Hoje</title>
+		<meta name="description" content="Rede de investimentos financeiros" />
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://gaidenblk.github.io/projetolandingpage/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Futuro Hoje">
-    <meta property="og:description" content="Rede de investimentos financeiros">
-    <meta property="og:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png">
+		<!-- Facebook Meta Tags -->
+		<meta
+			property="og:url"
+			content="https://gaidenblk.github.io/projetolandingpage/"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Futuro Hoje" />
+		<meta
+			property="og:description"
+			content="Rede de investimentos financeiros"
+		/>
+		<meta
+			property="og:image"
+			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"
+		/>
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="gaidenblk.github.io">
-    <meta property="twitter:url" content="https://gaidenblk.github.io/projetolandingpage/">
-    <meta name="twitter:title" content="Futuro Hoje">
-    <meta name="twitter:description" content="Rede de investimentos financeiros">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png">
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="gaidenblk.github.io" />
+		<meta
+			property="twitter:url"
+			content="https://gaidenblk.github.io/projetolandingpage/"
+		/>
+		<meta name="twitter:title" content="Futuro Hoje" />
+		<meta
+			name="twitter:description"
+			content="Rede de investimentos financeiros"
+		/>
+		<meta
+			name="twitter:image"
+			content="https://raw.githubusercontent.com/gaidenblk/gaidenblk.github.io/main/projetolandingpage/futurohoje.png"
+		/>
 
-    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-        
-</head>
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+	</head>
 
-<header>
-    <a id="voltarParaHome" class="material-symbols-outlined" href="/index.html">house</a>
-    <button id="buttonMode" class="material-symbols-outlined" onclick="toggleDarkMode()">dark_mode</button>
-    <div id="topo">
-        <div>
-            <canvas id="meuCanvas" width="130" height="125"></canvas>
-            <img id="futuroicone" src="img/futurohoje.png" alt="Futuro Hoje Logo">
-        </div>
-            <h1>FUTURO <br>HOJE</h1>
-</header>
-<body>
-    <main>
-
-        </div>
-        <section>
-            Procurando mudar a maneira<br> de investir seu dinheiro?<br>
-            Seja mais um de nossos <br>investidores de sucesso!<br>
-            Transforme seus sonhos em realidade!
-            <div id="futurpara">
-                <p>Comece a pensar<br> no futuro desde já!</p>
-                <p>Crie sua conta agora <br>e comece a investir!</p>
-            </div>
-        </section>
-        <form action="" method="post">
-            <div class="linha">
-                <div class="coluna">
-                    <label for="pnome">Nome</label>
-                    <input id="pnome" type="text">
-                </div>
-                <div class="coluna">
-                    <label for="snome">Sobrenome</label>
-                    <input id="snome" type="text">
-                </div>
-            </div>
-            <div class="linha">
-                <div class="coluna">
-                    <label for="user">Nome de Usuário</label>
-                    <input id="user" type="text" required>
-                </div>
-                <div class="coluna">
-                    <label for="email">E-mail</label>
-                    <input id="email" type="email" required>
-                </div>
-            </div>
-            <div class="linha">
-                <div class="coluna">
-                    <label for="senha">Senha</label>
-                    <input id="senha" type="password" required>
-                </div>
-                <div class="coluna">
-                    <label for="confsenha">Confirmar Senha</label>
-                    <input id="confsenha" type="password" required>
-                </div>
-            </div>
-            <div id="botao" class="linha">
-                <p>Ao Clicar em "Criar Conta" <br>você concorda com nossos<br><a href="html/termos.html">termos de serviços</a> e <br><a href="html/privacidade.html">política de privacidade</a></p>
-                <input type="submit" value="Criar conta">
-            </div>
-        </form>
-        <article>
-            <p>A Futuro Hoje tem transformado <br>a vida de muitos de seus investidores<br> simplesmente mudando a<br> forma de investir seu capital!</p>
-            <div id="depoimentos">
-                <p>"Eu não fazia ideia de quanto dinheiro estava deixando de ganhar por dia!"<br> <i>-Wallace G.</i></p>
-                <p>"Precisava de uma maneira nova de investir meu dinheiro, e encontrei a que mais se adequa às minhas necessidades!"<br><i>-Diana P.</i></p>
-                <p>"Diversificar minha carteira de investimentos é a maneira mais inteligente de acumular capital!"<br> <i>-Roger S.</i></p>
-            </div>
-        </article>
-    </main>
-    <footer>
-        <div id="login">
-            Já possui uma conta? <a href="">Faça Login</a><br>
-        </div>
-        Criado e desenvolvido por @gaidenblk softworks - 2024 - Todos os direitos reservados
-    </footer>
-</body>
-<script>
-    function toggleDarkMode() {
-var body = document.body;
-body.classList.toggle("dark-mode");
-
-var buttonMode = document.getElementById("buttonMode")
-if(body.classList.contains("dark-mode")){
-    buttonMode.textContent = "light_mode"
-}else{
-    buttonMode.textContent = "dark_mode"
-}
-}
-
-var canvas = document.getElementById('meuCanvas');
-var ctx = canvas.getContext('2d');
-var x = 65;
-var y = 60
-
-var angulo1 = 0;
-var angulo2 = 45;
-
-function desenha() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  ctx.save();
-  ctx.translate(x, y);
-  ctx.rotate(angulo1 * Math.PI / 180);
-  ctx.fillStyle = 'rgba(250, 235, 215, 0.5)';
-  ctx.fillRect(-50, -50, 100, 100);
-  ctx.restore();
-
-  ctx.save();
-  ctx.translate(x, y);
-  ctx.rotate(angulo2 * Math.PI / 180);
-  ctx.fillStyle = 'rgba(250, 235, 215, 0.5)';
-  ctx.fillRect(-50, -50, 100, 100);
-  ctx.restore();
-
-  angulo1++;
-  angulo2++;
-
-  requestAnimationFrame(desenha);
-}
-// Inicia a animação
-desenha();
-
-
-</script>
+	<body id="content">
+		<header>
+			<a
+				id="voltarParaHome"
+				class="material-symbols-outlined link"
+				href="/index.html"
+				>house</a
+			>
+			<button
+				id="buttonMode"
+				class="material-symbols-outlined"
+				onclick="toggleDarkMode()"
+			>
+				dark_mode
+			</button>
+			<div id="topo">
+				<div>
+					<canvas id="meuCanvas" width="130" height="125"></canvas>
+					<img
+						id="futuroicone"
+						src="img/futurohoje.png"
+						alt="Futuro Hoje Logo"
+					/>
+				</div>
+				<h1>FUTURO <br />HOJE</h1>
+			</div>
+		</header>
+		<main>
+			<section>
+				Procurando mudar a maneira<br />
+				de investir seu dinheiro?<br />
+				Seja mais um de nossos <br />investidores de sucesso!<br />
+				Transforme seus sonhos em realidade!
+				<div id="futurpara">
+					<p>
+						Comece a pensar<br />
+						no futuro desde já!
+					</p>
+					<p>Crie sua conta agora <br />e comece a investir!</p>
+				</div>
+			</section>
+			<form action="" method="post">
+				<div class="linha">
+					<div class="coluna">
+						<label for="pnome">Nome</label>
+						<input id="pnome" type="text" />
+					</div>
+					<div class="coluna">
+						<label for="snome">Sobrenome</label>
+						<input id="snome" type="text" />
+					</div>
+				</div>
+				<div class="linha">
+					<div class="coluna">
+						<label for="user">Nome de Usuário</label>
+						<input id="user" type="text" required />
+					</div>
+					<div class="coluna">
+						<label for="email">E-mail</label>
+						<input id="email" type="email" required />
+					</div>
+				</div>
+				<div class="linha">
+					<div class="coluna">
+						<label for="senha">Senha</label>
+						<input id="senha" type="password" required />
+					</div>
+					<div class="coluna">
+						<label for="confsenha">Confirmar Senha</label>
+						<input id="confsenha" type="password" required />
+					</div>
+				</div>
+				<div id="botao" class="linha">
+					<p>
+						Ao Clicar em "Criar Conta" <br />você concorda com
+						nossos<br /><a href="html/termos.html"
+							>termos de serviços</a
+						>
+						e <br /><a href="html/privacidade.html"
+							>política de privacidade</a
+						>
+					</p>
+					<input type="submit" value="Criar conta" />
+				</div>
+			</form>
+			<article>
+				<p>
+					A Futuro Hoje tem transformado <br />a vida de muitos de
+					seus investidores<br />
+					simplesmente mudando a<br />
+					forma de investir seu capital!
+				</p>
+				<div id="depoimentos">
+					<p>
+						"Eu não fazia ideia de quanto dinheiro estava deixando
+						de ganhar por dia!"<br />
+						<i>-Wallace G.</i>
+					</p>
+					<p>
+						"Precisava de uma maneira nova de investir meu dinheiro,
+						e encontrei a que mais se adequa às minhas
+						necessidades!"<br /><i>-Diana P.</i>
+					</p>
+					<p>
+						"Diversificar minha carteira de investimentos é a
+						maneira mais inteligente de acumular capital!"<br />
+						<i>-Roger S.</i>
+					</p>
+				</div>
+			</article>
+		</main>
+		<footer>
+			<div id="login">
+				Já possui uma conta? <a href="">Faça Login</a><br />
+			</div>
+			Criado e desenvolvido por @gaidenblk softworks - 2024 - Todos os
+			direitos reservados
+		</footer>
+	</body>
+	<script src="./main.js"></script>
 </html>
